--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.54.1",
+    "@aws-sdk/client-s3": "3.54.1",
     "aws-sdk": "^2.922.0",
     "axios": "^0.25.0",
     "cli-docs-generator": "^1.0.7",
