--- a/.github/workflows/dnx_ci-build-and-push.yml
+++ b/.github/workflows/dnx_ci-build-and-push.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          platforms: linux/amd64,linux/arm64
 
       - name: Set output TAGs
         id: vars
