--- a/.github/workflows/dnx_ci-build-and-push.yml
+++ b/.github/workflows/dnx_ci-build-and-push.yml
@@ -46,5 +46,6 @@ jobs:
         with:
           context: .
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.vars.outputs.tag }},${{ steps.vars.outputs.latest }}
           no-cache: true
