feat(package.json): add arm64 target

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
       "/**/**/Dockerfile"
     ],
     "targets": [
-      "node14-linux-x64"
+      "node14-linux-x64",
+      "node14-linux-arm64"
     ],
     "outputPath": "dist"
   }
