--- a/.github/workflows/dnx_ci-build-and-push.yml
+++ b/.github/workflows/dnx_ci-build-and-push.yml
@@ -45,7 +45,19 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: Dockerfile
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           tags: ${{ steps.vars.outputs.tag }},${{ steps.vars.outputs.latest }}
+          no-cache: true
+
+      - name: Build and push - ${{ env.APPNAME }}-arm64
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile.arm
+          push: true
+          platforms: linux/arm64
+          tags: ${{ steps.vars.outputs.tag }}-arm64
           no-cache: true
