--- a/.github/workflows/dnx_ci-build-and-push.yml
+++ b/.github/workflows/dnx_ci-build-and-push.yml
@@ -52,7 +52,7 @@ jobs:
           no-cache: true
 
       - name: Build and push - ${{ env.APPNAME }}-arm64
-        id: docker_build
+        id: docker_build_arm
         uses: docker/build-push-action@v2
         with:
           context: .
