--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -28,12 +28,12 @@ RUN curl -sL "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master
 RUN wget https://github.com/moby/buildkit/releases/download/v0.9.3/buildkit-v0.9.3.linux-arm64.tar.gz && \
     tar -xvf buildkit-v0.9.3.linux-arm64.tar.gz && cp bin/* /usr/bin/ && chmod +x /usr/bin/buildctl && chmod +x /usr/bin/buildkitd && rm -rf bin && rm -f buildkit-v0.9.3.linux-arm64.tar.gz
 
-RUN wget https://github.com/google/go-containerregistry/releases/download/v0.8.0/go-containerregistry_Linux_x86_64.tar.gz && \
-    tar -xvf go-containerregistry_Linux_x86_64.tar.gz  && mv gcrane /usr/bin/crane && chmod +x /usr/bin/crane && rm -f go-containerregistry_Linux_x86_64.tar.gz && rm -f crane
+RUN wget https://github.com/google/go-containerregistry/releases/download/v0.8.0/go-containerregistry_Linux_arm64.tar.gz && \
+    tar -xvf go-containerregistry_Linux_arm64.tar.gz  && mv gcrane /usr/bin/crane && chmod +x /usr/bin/crane && rm -f go-containerregistry_Linux_arm64.tar.gz && rm -f crane
 
 RUN mkdir -p /trivy && cd /trivy && \
-    wget https://github.com/aquasecurity/trivy/releases/download/v0.44.0/trivy_0.44.0_Linux-64bit.tar.gz && \
-    tar -xvf trivy_0.44.0_Linux-64bit.tar.gz && mv trivy /usr/bin/ && rm -f trivy_0.44.0_Linux-64bit.tar.gz
+    wget https://github.com/aquasecurity/trivy/releases/download/v0.44.0/trivy_0.44.0_Linux-ARM64.tar.gz && \
+    tar -xvf trivy_0.44.0_Linux-ARM64.tar.gz && mv trivy /usr/bin/ && rm -f trivy_0.44.0_Linux-ARM64.tar.gz
     
 
 RUN wget https://github.com/mikefarah/yq/releases/download/v4.23.1/yq_linux_arm64 && mv yq_linux_arm64 /usr/bin/yq && chmod +x /usr/bin/yq
